# MODI

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: pytest.yml
code/: README.md  dashboard.ipynb  dynamics.py  utils.ipynb
data/input/: classlabels.txt
docs/: index.rst
docs/source/: conf.py  index.rst
notebooks/: README.md  dashboard.ipynb  utils.ipynb  utils.py
src/: README.md  initialization.py  main.py
src/modi_flows/: README.md  dynamics.py  main.py
src/modi_flows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dashboard.py
